adding feedback section and smooth scroll

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -9,15 +9,15 @@
                             <h2><a href="/">Sharaqi.</a></h2>
                         </li>
                         <li class="chooses"><a href="/">Home</a></li>
-                        <li class="chooses"><a href="/#portfolio">Portfolio</a></li>
+                        <li class="chooses"><a href="/#portfolio" class='portfolio'>Portfolio</a></li>
                         <li class="chooses"><a href="/">Resume</a></li>
-                        <li class="chooses"><a href="/#feedback">Feedback</a></li>
+                        <li class="chooses"><a href="/#feedback" class='feedback'>Feedback</a></li>
                         <li class="chooses"><a href="/">Connect</a></li>
                     </ul>
                 </div>
             </div>
 
-            <div class="row">
+            <div class="row" style="position: relative">
                 <div class="container">
                     <div class="social">
                         <ul class="socialUL">
@@ -368,7 +368,7 @@
         <h5 class="thanks" style="margin-bottom: 20px">Thanks for scrolling <i class="fas fa-heart animated infinite pulse faster"
                 style="color: red; opacity: 1; font-size: 16px"></i></h5>
         <p class="thanks" style="margin-top: 0">We hope that this site touched what you are looking for about "Sharaqi"<br>
-            Please give us a <a href="/feedback-us">feedback</a> for future enhancements. or <a href="/contact-us">contact
+            Please give us a <a href="/#feedback"  class='feedbackII'>feedback</a> for future enhancements. or <a href="/contact-us">contact
                 us</a> now</p>
 
     </div>
