--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,3 +1,7 @@
+html {
+	scroll-behavior: smooth;
+  }
+
 * {
   padding: 0;
   margin: 0;
@@ -116,6 +120,14 @@ img {
   opacity: 0.75;
 }
 
+
+.sharaqi-word {
+	position: absolute;
+	top: 245px;
+	right: 435px;
+	z-index: 99;
+}
+
 h2.sharaqi, .sharaqi-word > p {
 	font-size: 100px;
 	font-weight: bold;
@@ -124,7 +136,7 @@ h2.sharaqi, .sharaqi-word > p {
 	text-transform: uppercase;
 	letter-spacing: 7px;
 	/* margin-top: -128px; */
-	position: absolute;
+	/* position: absolute; */
 	top: 380px;
 	right: 33%;
 	z-index: 999;
@@ -812,3 +824,168 @@ small, {opacity: 0.5; text-align: center; text-transform:lowercase;}
 }
 
 .footer .fas.fa-phone{margin-right: 0}
+
+
+.socialUL {
+	position: absolute;
+	right: 2%;
+	top: 20%;
+}
+
+/* Forms */
+/* Feedback */
+.row.contactbody {
+	width: 100%;
+	height: 900px;
+  background: #ddd;
+  display: none
+}
+.contactbody {
+	overflow-y: auto;
+  background: rgb(111, 111, 111) none repeat scroll 0% 0%;
+  display: none;
+	top: 0%;
+	display: block;
+	position: absolute;
+	top: 0;
+	right: -90%;
+	z-index: 99999;
+}
+
+.feedback-form{
+  width: 100%;
+  /* filter: blur(8px) */
+}
+
+.fas.fa-arrow-left {
+	font-size: 20px;
+	color: #fff700;
+	margin-top: 25px;
+	padding: 10px 10px 10px 30px;
+}
+
+.fas.fa-arrow-left:hover{
+  cursor: pointer;
+}
+
+h3 {
+	text-align: center;
+	margin: 90px auto 20px;
+	font-weight: bold;
+	font-size: 20px;
+}
+
+input {
+	width: 50%;
+	display: block;
+	margin: 35px auto;
+	padding: 10px 10px 10px 5px;
+	border: 0;
+	border-bottom: 2px solid #fff700;
+}
+
+input {
+	width: 80%;
+	display: block;
+	margin: 20px auto;
+	padding: 10px 10px 10px 5px;
+	border: 0;
+	border-bottom: 2px solid #fff700;
+	border-bottom: 1px solid #252a40;
+	background-color: transparent;
+	color: #252a40;
+	letter-spacing: 2px;
+	text-transform: capitalize;
+}
+
+.feedback-btn {
+	width: 50%;
+	margin-top: 0;
+	background-color: #fff700;
+	color: #252a40;
+	font-size: 20px;
+}
+
+.feedback-body{
+  /* background-color: #E9E9E9; */
+  position: absolute;
+  top: -90%;
+  left: 10%;
+  background-color: #fff;
+  width: 80%;
+  border-radius: 35px;
+  z-index: 99999999;
+}
+
+
+
+.feedback-body {
+	/* background-color: #E9E9E9; */
+	position: absolute;
+	top: 7%;
+	left: -85%;
+	background-color: #fff;
+	width: 80%;
+	border-radius: 35px;
+	/* z-index: 99999999; */
+	box-shadow: 0 0 10px #252a40cc;
+}
+
+.right-part{
+  text-align: center;
+  margin-top: -65px;
+  background-color: #E9E9E9;	
+  background-color: #F4F4F461;
+  border-bottom-right-radius: 35px;
+  border-top-right-radius: 35px;
+}
+
+input {
+	width: 80%;
+	display: block;
+	margin: 20px auto;
+	padding: 10px 10px 10px 5px;
+  border: 0;
+	border-bottom: 2px solid #fff700;
+	border-bottom: 1px solid #252a40;
+	background-color: transparent;
+	color: #252a40;
+}
+
+form {
+	width: 100%;
+	padding-bottom: 40px;
+}
+
+.feedback-p {
+	width: 70%;
+	text-align: center;
+	margin: 0 auto;
+	font-size: 14px;
+	margin-bottom: 30px;
+}
+
+.feedback-btn {
+	width: 80%;
+	margin-top: 40px;
+	background-color: #fff700;
+	color: #252a40;
+	font-size: 20px;
+	background: #252a40;
+	color: #fff;
+	padding: 5px;
+	font-size: 25px;
+}
+
+.feedback-btn:hover{
+  background-color: #fff700;
+  border: 0
+}
+
+/* Media */
+@media(max-width: 975px){
+	.chooses{
+		display: none
+	}
+}
+/* End Media */
