--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -50,6 +50,39 @@
   </div>
   {{/if}}
   
+
+
+{{!-- Feedback Form --}}
+<div class="row contactbody">
+  <div class="row feedback-body">
+  <div class="row" style="width: 100%">
+    <div class="container"><i class="fas fa-arrow-left"></i></div>
+  </div>
+  <div class="row" style="width: 100%;">
+    <div class="col-lg-4 col-md-5 col-sm-6 col-xs-12">
+      <img style="width: 60%; margin-top: 30%;" src="/images/undraw_mail_box_kd5i.svg" alt="Feedback Us!">
+    </div>
+    <div class="col-lg-8 col-md-7 col-sm-6 col-xs-12 right-part">
+      <div class="row">
+        <h3 style="width: 100%">Feedback is the breakfast of champions.</h3>
+        <p class="feedback-p">Feedback us for more enhanceents in the future, We promise that we will take your feedback in concener!</p>
+      </div>
+      <div class="row">
+        <form action="/#feedback" method="post">
+          <input type="text" name="name" placeholder="Full Name*">
+          <input type="text" name="name" placeholder="Email*">
+          <input type="text" name="name" placeholder="Feedback Message*">
+          <button type="submit" class="feedback-btn"><i class="fas fa-paper-plane"></i></button>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
+</div>
+
+{{!-- End of Feedback Form --}}
+
+
   {{{body}}}
  
   {{#if is404}}
@@ -74,7 +107,7 @@
 
 
   <script src="/bower_components/jquery/dist/jquery.js"></script>
-  <script src="../javascripts/{{WTSAM}}"></script>
+  <script src="../javascripts/{{feedback}}"></script>
 </body>
 
 </html>
