--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -12,6 +12,11 @@ html {
 
 }
 
+p.txt, p.thanks {
+    font-size: 15px;
+    width: 64%;
+}
+
 body{
   overflow-x: hidden
 }
@@ -198,7 +203,7 @@ h2.sharaqi, .sharaqi-word > p {
 	margin-left: -13px;
 	/* overflow: hidden; */
 	overflow-x: hidden;
-	/* position: absolute; */
+	position: relative;
 }
 
 h5 {
@@ -215,6 +220,23 @@ h5 {
 	z-index: 9999;
 }
 
+.row.img-index {
+    margin: 40px 0;
+    z-index: 9999999999;
+    position: relative;
+}
+
+.txt-rotat {
+    margin: -72px 0 0 0;
+    margin-top: -100px;
+    z-index: 0;
+    height: 100px;
+}
+
+.portfolio-intro {
+    margin-top: -128px;
+    z-index: 999;
+}
 p.txt {
 	margin: 0;
 	padding: 0;
@@ -288,7 +310,7 @@ h6 {
 }
 
 .port-img-a {
-	background-image: url('../images/Sharaqi.jpg');
+	/* background-image: url('../images/Sharaqi.jpg'); */
 	width: 100%;
 	height: 400px;
 	border-radius: 10px;
@@ -981,11 +1003,108 @@ form {
   background-color: #fff700;
   border: 0
 }
-
+.chooses.bars{display: none}
 /* Media */
-@media(max-width: 975px){
-	.chooses{
-		display: none
+@media (min-width: 70px) and (max-width: 997px){
+	.chooses{display: none}
+	.chooses.bars{display: inline-block}
+	.chooses.bars {
+		font-size: 22px;
+		text-align: right;
+		float: right;
+		color: #fff700;
+		margin-right: 5%;
+		margin-top: 1%;
 	}
+	.logo {
+		margin-right: 150px;
+		font-size: 22px !important;
+		text-align: right;
+		float: left;
+		color: #fff700;
+		margin-left: 5%;
+		margin-top: 1%;
+	}
+	.logo a {
+		font-size: 40px;
+	}
+	h2.sharaqi, .sharaqi-word > p {
+		font-size: 88px;
+	}
+	.sharaqi-word > p {
+		font-size: 12px;
+		letter-spacing: 15px;
+
+	}
+	.sharaqi-word {
+		position: absolute;
+		top: 245px;
+		right: 21%;
+		z-index: 99;
+	}
+	.txt {
+		padding: 0 50px !important;
+	}
+}
+
+@media (max-width: 816px){
+	img {
+		width: 60%;
+	}
+	.social{display: none}
+	.sharaqi-word > p {
+		font-size: 13px;
+		letter-spacing: 7px;
+	}
+	h2.sharaqi {
+		font-size: 56px;
+		margin-bottom: 0
+	}
+	.sharaqi-word {
+		top: 50%;
+		right: 18%;
+	}
+	.sharaqi-img {
+		width: 55%;
+		height: 335px;
+	}
+	.img-index{
+		margin-top: -23%;
+		z-index: 9999999999;
+		position: relative;
+	}
+	.txt-rotat {
+		margin-top: -44px;
+		margin-left: -8px;
+	}
+
+	.row.img-index {
+		margin: -70px 0 0 0;
+	}
+
+	.card {
+		max-width: 300px;
+		min-width: 300px;
+		min-height: 250px;
+		padding: 40px 20px 20px;
+	}
+	.slider .txt-6 {
+		font-size: 13px;
+	}
+	.slider h5 {
+		font-size: 14px;
+	}
+	small, .small {
+		font-size: 70%;
+	}
+
+	p.thanks {
+		width: 80%;
+		font-size: 14px;
+	}
+	p.txt {
+		font-size: 14px;
+	}
+
 }
 /* End Media */
