--- a/views/index.hbs
+++ b/views/index.hbs
@@ -13,6 +13,7 @@
                         <li class="chooses"><a href="/">Resume</a></li>
                         <li class="chooses"><a href="/#feedback" class='feedback'>Feedback</a></li>
                         <li class="chooses"><a href="/">Connect</a></li>
+                        <li class="chooses bars"><i class="fas fa-bars"></i></li>
                     </ul>
                 </div>
             </div>
@@ -59,7 +60,7 @@
 
 <div class="rot"></div>
 
-<div class="row">
+<div class="row img-index">
     <img src="/images/undraw_hacker_mindset_gjwq.svg" alt="About Me!">
 </div>
 <div class="row">
@@ -322,35 +323,13 @@
 <div class="row portfolio">
     <div class="container">
         <div class="row">
-            <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
+            <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+                <div class="port-img-a"><img src="https://via.placeholder.com/468x60?text=Visit+Blogging.com+Now" alt="" srcset=""></div>
+            </div>
+            <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
                 <div class="port-img-a"></div>
             </div>
-            <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
-                <div class="port-img-a"></div>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
-                <div class="port-img-a"></div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
-                <div class="port-img-a"></div>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
-                <div class="port-img-a"></div>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
-                <div class="port-img-a"></div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
-                <div class="port-img-a"></div>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
-                <div class="port-img-a"></div>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
+            <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
                 <div class="port-img-a"></div>
             </div>
         </div>
@@ -367,7 +346,7 @@
     <div class="row">
         <h5 class="thanks" style="margin-bottom: 20px">Thanks for scrolling <i class="fas fa-heart animated infinite pulse faster"
                 style="color: red; opacity: 1; font-size: 16px"></i></h5>
-        <p class="thanks" style="margin-top: 0">We hope that this site touched what you are looking for about "Sharaqi"<br>
+        <p class="thanks" style="margin-top: 0">We hope that this site touched what you are looking for about "Sharaqi", 
             Please give us a <a href="/#feedback"  class='feedbackII'>feedback</a> for future enhancements. or <a href="/contact-us">contact
                 us</a> now</p>
 
